<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@android:drawable/ic_input_add"
        app:backgroundTint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_spend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="144dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@android:drawable/ic_input_add"
        android:visibility="invisible"
        app:backgroundTint="@color/colorPrimary"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_statistics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="208dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:clickable="true"
        android:focusable="true"
        android:visibility="invisible"
        app:fabSize="mini"
        android:src="@android:drawable/ic_input_add"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_member"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="272dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:clickable="true"
        android:focusable="true"
        android:visibility="invisible"
        app:fabSize="mini"
        android:src="@android:drawable/ic_input_add"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ListView
        android:id="@+id/indexList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/spend_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/spend_hint"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/fab_spend"
        app:layout_constraintEnd_toStartOf="@+id/fab_spend" />

    <TextView
        android:id="@+id/statistics_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/statistics_hint"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/fab_statistics"
        app:layout_constraintEnd_toStartOf="@+id/fab_statistics" />

    <TextView
        android:id="@+id/member_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/member_hint"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/fab_member"
        app:layout_constraintEnd_toStartOf="@+id/fab_member" />
</android.support.constraint.ConstraintLayout>